# Multi-Modal-GRPO-with-two-head-attentions

./: .gitignore  README.md  classifier_dataset.csv  mgrpo-attention-prefix.ipynb  pyproject.toml  requirements.txt
data/: prompts.jsonl
notebooks/: exploration.ipynb
scripts/: classifier_training.py
src/: main.py
src/mgrpo/: __init__.py  config.py
src/mgrpo/data/: dataset.py
src/mgrpo/models/: attention.py  generator.py
src/mgrpo/rl/: policy.py  rewards.py
src/mgrpo/training/: router.py  train_classifier.py  trainer.py
src/mgrpo/utils/: tracking.py
tests/: test_attention.py
